<package format="3">
  <name>apriltag_hitch_estimation</name>
  <version>0.0.1</version>
    <description>
      A package that estimates the hitch joint state between a robot and a
      trailer by optical recognition of an array of april tags mounted at the
      front of the trailer by the rear camera of the robot
    </description>
    <maintainer email="alefilot@auth.gr">li9i</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
