<?xml version="1.0"?>
<package format="3">
  <name>apriltag_sync</name>
  <version>0.1.0</version>
  <description>Synchronise image and camera info topics => needed by apriltag detection</description>
  <maintainer email="oh@no.com">li9i</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
