<?xml version="1.0"?>
<package format="3">
  <name>xyz_to_ply_transframer</name>
  <version>0.0.1</version>
  <description>Generic xyz-to-ply transformer between frames using TF2.</description>

  <maintainer email="alefilot@auth.gr">li9i</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>yaml-cpp</depend>
  <depend>pcl_conversions</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
